# repo-readme-polisher

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  MCP.md  RELEASE.md
examples/: README_DRAFT.ai.sample.md  README_DRAFT.ai.sample.md.ai-prompt.md  README_DRAFT.sample.md  README_DRAFT.zh-CN.sample.md  scan.sample.json
repo_readme_polisher/: __init__.py  __main__.py  ai.py  detector.py  generator.py  mcp_server.py  scanner.py
tests/: test_ai.py  test_generator.py  test_mcp_server.py
